        - Add more than one instance in dev mode
        - Add zope undo to zeoserver
        - Add more queues in balancer template
        - upgrade dexterity to 1.0
        - upgrade plone41 to 4.1rc1
        - upgrade plone40 to 4.0.6
        - add Products:

            - qi.portlet.tagclouds
            - collective.googleanalytics
            - solgema.fullcalendar



1.3.1855 (2011-04-01)
---------------------

- handle dyldlibrarypath on darwin


1.3.1854 (2011-04-01)
---------------------

    - blobstorage improvments
    - upgrade plone4 versions (zope 212/plone4 KGS)
    - store now blobstorage and fss in resp. var/blobstorage/ & var/fss
    - support cynin
    - fix plomino versions
    - up bootstrap
    - Rework the django template
    - add PKGCONFIGPATH handle to instances.env
    - add LDFLAGS, CFLAGS, CPPFLAGs, CXXFLAGS handle to instances.env
    - add dexterity support
    - add plone.app.async support
    - add several plone addons
    - fix archetypes.schemaextender versions on p4/p41
    - fix supervisor init script generation
    - add rpath to minitage.instances.env

-> 1.3.176
-----------

    - add plone core mr.developer configs, you can now develop each plone subpackage
    - upgrade eggs versions in plone configuration files
    - better handle of kgs, and mr.developer buildouts
    - add inheritance in the plone configuration parser
    - added some tests for the plone configuration parser
    - activated the minitage.plone4 template (beta state)
    - support for staging development (get state from production)
    - blobstorage support
    - transmogrifier support
    - devmode support
    - apache & deliverance integration for plone3
    - lot of new plone products
    - pilwotk 116 -> pil 117


1.3.149
----------

    - plone3 template maintenance
    - plone3 auto project buildbot support
    - nginx instance
    - init.d files coherence
    - flickr api patch on plone3
    - testrunner parts