@@ -11,8 +11,8 @@ collective.monkeypatcher            = svn https://svn.plone.org/svn/collective/c
 five.customerize                    = svn http://svn.zope.org/repos/main/five.customerize/trunk
 five.formlib                        = svn http://svn.zope.org/repos/main/five.formlib/trunk
 five.localsitemanager               = svn http://svn.zope.org/repos/main/five.localsitemanager/trunk
-kss.core                            = svn https://codespeak.net/svn/kukit/kss.core/trunk
-kss.demo                            = svn https://codespeak.net/svn/kukit/kss.demo/trunk
+kss.core                            = svn https://svn.plone.org/svn/collective/kukit/kss.core/trunk
+kss.demo                            = svn https://svn.plone.org/svn/collective/kukit/kss.demo/trunk
 plone.browserlayer                  = svn https://svn.plone.org/svn/plone/plone.browserlayer/branches/2.0
 plone.contentrules                  = svn https://svn.plone.org/svn/plone/plone.contentrules/trunk
 plone.fieldsets                     = svn https://svn.plone.org/svn/plone/plone.fieldsets/trunk
@@ -105,7 +105,7 @@ Products.PloneTestCase              = svn https://svn.plone.org/svn/collective/P
 Products.PluggableAuthService       = svn http://svn.zope.org/repos/main/Products.PluggableAuthService/trunk
 Products.PluginRegistry             = svn http://svn.zope.org/repos/main/Products.PluginRegistry/trunk
 Products.PortalTransforms           = svn https://svn.plone.org/svn/archetypes/Products.PortalTransforms/trunk
-Products.ResourceRegistries         = svn https://svn.plone.org/svn/plone/ResourceRegistries/trunk
+Products.ResourceRegistries         = svn https://svn.plone.org/svn/plone/ResourceRegistries/branches/2.0
 Products.SecureMailHost             = svn https://svn.plone.org/svn/collective/SecureMailHost/branches/1.1
 Products.statusmessages             = svn https://svn.plone.org/svn/collective/statusmessages/trunk
 Products.TinyMCE                    = svn https://svn.plone.org/svn/collective/Products.TinyMCE/branches/1.1
