@@ -1,4 +1,4 @@
-#PLONE4 4.0.6 KGS
+#PLONE4 4.0.7 KGS
 [buildout]
 
 [versions]
@@ -7,7 +7,7 @@ mr.developer = 1.17
 plone.recipe.alltests = 1.2
 plone.recipe.zope2instance = 4.1.5
 plone.recipe.zeoserver = 1.2.0
-distribute = 0.6.15
+distribute = 0.6.16
 setuptools = 0.6c11
 z3c.coverage = 1.2.0
 
@@ -24,7 +24,7 @@ python-openid = 2.2.5
 simplejson = 2.1.3
 
 # Plone release
-Plone                                 = 4.0.6
+Plone                                 = 4.0.7
 Products.ATContentTypes               = 2.0.7
 Products.ATReferenceBrowserWidget     = 3.0
 Products.Archetypes                   = 1.6.6
@@ -49,18 +49,17 @@ Products.ExternalEditor               = 1.0
 Products.GenericSetup                 = 1.6.3
 Products.Marshall                     = 2.0
 Products.MimetypesRegistry            = 2.0.2
-Products.PasswordResetTool            = 2.0.5
+Products.PasswordResetTool            = 2.0.6
 Products.PlacelessTranslationService  = 2.0.2
 Products.PloneLanguageTool            = 3.0.8
 Products.PlonePAS                     = 4.0.7
 Products.PloneTestCase                = 0.9.12
-Products.PluggableAuthService         = 1.7.3
+Products.PluggableAuthService         = 1.7.5
 Products.PluginRegistry               = 1.3b1
 Products.PortalTransforms             = 2.0.5
 Products.ResourceRegistries           = 2.0.4
 Products.SecureMailHost               = 1.1.2
 Products.TinyMCE                      = 1.1.10
-
 Products.ZopeVersionControl           = 1.1.3
 Products.i18ntestcase                 = 1.2
 Products.kupu                         = 1.4.17
@@ -85,17 +84,17 @@ plone.app.folder                      = 1.0.3
 plone.app.form                        = 2.0.2
 plone.app.i18n                        = 2.0
 plone.app.imaging                     = 1.0.5
-plone.app.iterate                     = 2.1
+plone.app.iterate                     = 2.1.2
 plone.app.jquerytools                 = 1.1.2
 plone.app.kss                         = 1.6.2
-plone.app.layout                      = 2.0.9
+plone.app.layout                      = 2.0.10
 plone.app.linkintegrity               = 1.3.2
 plone.app.locales                     = 4.0.7
 plone.app.openid                      = 2.0.1
 plone.app.portlets                    = 2.0.4
 plone.app.redirector                  = 1.1.1
-plone.app.upgrade                     = 1.0.6
-plone.app.users                       = 1.0.4
+plone.app.upgrade                     = 1.0.7
+plone.app.users                       = 1.0.5
 plone.app.viewletmanager              = 2.0.1
 plone.app.vocabularies                = 2.0.3
 plone.app.workflow                    = 2.0
@@ -127,5 +126,3 @@ zope.ramcache                         = 1.0
 
 # CMFEditions is incompatible with ZODB 3.9.6+
 ZODB3                                 = 3.9.5
-ZODB3 = 3.10.2
-transaction = 1.1.1
