@@ -81,7 +81,7 @@ for name in sources_k:
     )
 
 class Template(plone4.Template):
-    packaged_version = '4.1rc2'
+    packaged_version = '4.1rc3'
     packaged_zope2_version = '2.13.7'
     packaged_ztk_version = '1.0.2'
     summary                    = 'Template for creating a plone41 project'
