@@ -1,4 +1,4 @@
-#PLONE4 4.1rc2 KGS
+#PLONE4 4.1rc3 KGS
 [buildout]
 notused-extends = http://download.zope.org/zopetoolkit/index/1.0.2/zopeapp-versions.cfg
           http://download.zope.org/Zope2/index/2.13.7/versions.cfg
@@ -7,8 +7,10 @@ notused-extends = http://download.zope.org/zopetoolkit/index/1.0.2/zopeapp-versi
 # Buildout infrastructure
 mr.developer = 1.17
 plone.recipe.alltests = 1.2
-plone.recipe.zope2instance = 4.1.5
+plone.recipe.zope2instance = 4.1.6
 plone.recipe.zeoserver = 1.2.0
+distribute = 0.6.16
+setuptools = 0.6c11
 z3c.coverage = 1.2.0
 
 # Overrides
@@ -27,7 +29,7 @@ python-openid = 2.2.5
 simplejson = 2.1.3
 
 # Plone release
-Plone                                 = 4.1rc2
+Plone                                 = 4.1rc3
 Products.ATContentTypes               = 2.1.2
 Products.ATReferenceBrowserWidget     = 3.0
 Products.Archetypes                   = 1.7.6
@@ -40,7 +42,7 @@ Products.CMFDynamicViewFTI            = 4.0.2
 Products.CMFEditions                  = 2.1.3
 Products.CMFFormController            = 3.0.2
 Products.CMFPlacefulWorkflow          = 1.5.4
-Products.CMFPlone                     = 4.1rc2
+Products.CMFPlone                     = 4.1rc3
 Products.CMFQuickInstallerTool        = 3.0.5
 Products.CMFTestCase                  = 0.9.11
 Products.CMFTopic                     = 2.2.1
@@ -52,12 +54,12 @@ Products.ExternalEditor               = 1.0
 Products.GenericSetup                 = 1.6.3
 Products.Marshall                     = 2.1
 Products.MimetypesRegistry            = 2.0.2
-Products.PasswordResetTool            = 2.0.5
+Products.PasswordResetTool            = 2.0.6
 Products.PlacelessTranslationService  = 2.0.2
 Products.PloneLanguageTool            = 3.2.2
 Products.PlonePAS                     = 4.0.7
 Products.PloneTestCase                = 0.9.13
-Products.PluggableAuthService         = 1.7.4
+Products.PluggableAuthService         = 1.7.5
 Products.PluginRegistry               = 1.3b1
 Products.PortalTransforms             = 2.0.6
 Products.ResourceRegistries           = 2.0.4
@@ -70,7 +72,7 @@ Products.kupu                         = 1.5.0
 Products.statusmessages               = 4.0
 Products.validation                   = 2.0
 archetypes.kss                        = 1.7.0
-archetypes.referencebrowserwidget     = 2.4.1
+archetypes.referencebrowserwidget     = 2.4.2
 archetypes.schemaextender             = 2.1
 borg.localrole                        = 3.0.2
 collective.monkeypatcher              = 1.0.1
@@ -88,7 +90,7 @@ plone.app.contentmenu                 = 2.0.3
 plone.app.contentrules                = 2.1.3
 plone.app.controlpanel                = 2.1.1
 plone.app.customerize                 = 1.2.2
-plone.app.discussion                  = 2.0.3
+plone.app.discussion                  = 2.0.4
 plone.app.folder                      = 1.0.4
 plone.app.form                        = 2.0.2
 plone.app.i18n                        = 2.0
@@ -96,7 +98,7 @@ plone.app.imaging                     = 1.0.5
 plone.app.iterate                     = 2.1.1
 plone.app.jquerytools                 = 1.2
 plone.app.kss                         = 1.6.2
-plone.app.layout                      = 2.1.5
+plone.app.layout                      = 2.1.6
 plone.app.linkintegrity               = 1.4.1
 plone.app.locales                     = 4.0.7
 plone.app.openid                      = 2.0.1
@@ -104,8 +106,8 @@ plone.app.portlets                    = 2.1.5
 plone.app.redirector                  = 1.1.1
 plone.app.registry                    = 1.0
 plone.app.testing                     = 4.0
-plone.app.upgrade                     = 1.1rc2
-plone.app.users                       = 1.1
+plone.app.upgrade                     = 1.1rc3
+plone.app.users                       = 1.1.1
 plone.app.uuid                        = 1.0
 plone.app.viewletmanager              = 2.0.2
 plone.app.vocabularies                = 2.1.2
@@ -135,11 +137,11 @@ plone.reload                          = 2.0b1
 plone.scale                           = 1.2.2
 plone.session                         = 3.5
 plone.stringinterp                    = 1.0.4
-plone.supermodel                      = 1.0.2
-plone.testing                         = 4.0
+plone.supermodel                      = 1.0.3
+plone.testing                         = 4.0.1
 plone.theme                           = 2.1
 plone.transformchain                  = 1.0
-plone.uuid                            = 1.0
+plone.uuid                            = 1.0.1
 plone.z3cform                         = 0.7.6
 plonetheme.classic                    = 1.1
 plonetheme.sunburst                   = 1.1.4
